<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>leaflet-access-gateway-service</artifactId>
    <packaging>pom</packaging>
    <version>1.3.0-dev</version>

    <modules>
        <module>core</module>
        <module>web</module>
    </modules>

    <profiles>
        <profile>
            <id>acceptance</id>
            <modules>
                <module>acceptance</module>
            </modules>
        </profile>
    </profiles>

    <parent>
        <groupId>hu.psprog.leaflet</groupId>
        <artifactId>leaflet-stack-base-bom</artifactId>
        <version>3.0-r2305.1</version>
    </parent>

    <properties>

        <!-- default Spring Boot application profile -->
        <spring.profiles.active>development</spring.profiles.active>
        <spring.config.location>web/src/main/resources/application.yml</spring.config.location>

        <!-- Java environment version -->
        <java.version>17</java.version>

        <!-- compiler settings -->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Docker build configuration -->
        <!--suppress UnresolvedMavenProperty -->
        <docker.repository>${LEAFLET_DOCKER_REGISTRY_HOST}</docker.repository>
        <docker.image-name>lags</docker.image-name>
        <docker.skip>true</docker.skip>

        <!-- test dependency versions -->
        <cucumber-java.version>7.6.0</cucumber-java.version>
        <junit-platform-suite.version>1.9.0</junit-platform-suite.version>

    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <!--suppress UnresolvedMavenProperty -->
                    <argLine>${argLine.surefire}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy-plugin.version}</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/config/**</exclude>
                        <exclude>**/domain/**</exclude>
                        <exclude>**/model/**</exclude>
                        <exclude>**/LeafletAccessGatewayApplication.*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>ut-pre</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/coverage/jacoco-ut.exec</destFile>
                            <propertyName>argLine.surefire</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>ut-post</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>${project.build.directory}/coverage/jacoco-ut.exec</dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
